--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 
 <body>
   <div id="app"></div>
-<script type="text/javascript" src="/main.js"></script></body>
+<script type="text/javascript" src="./main.js"></script></body>
 
 </html>
